--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       db:
         condition: service_healthy
 
-# 👇 este bloque DEBE estar al final del archivo:
+# este bloque DEBE estar al final del archivo:
 volumes:
   db_data:
 
