--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,4 @@
-REACT_APP_API_URL=http://localhost:4000/api
+REACT_APP_API_URL=https://localhost:4430/api
+HTTPS=true
+SSL_CRT_FILE=../ssl/server.cert
+SSL_KEY_FILE=../ssl/server.key
