--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -35,12 +35,12 @@ services:
       - "4000:4000"
     volumes:
       - .:/app
-      - /app/node_modules
+      - node_modules:/app/node_modules
     depends_on:
       db:
         condition: service_healthy
 
-# este bloque DEBE estar al final del archivo:
 volumes:
   db_data:
   keyring_data:
+  node_modules:
