--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 REACT_APP_API_URL=https://localhost:4430/api
 HTTPS=true
-SSL_CRT_FILE=../ssl/server.cert
-SSL_KEY_FILE=../ssl/server.key
+SSL_CRT_FILE=../backend/ssl/server.cert
+SSL_KEY_FILE=../backend/ssl/server.key
